# ChangeLog for dev-db/sqliteman
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
  sqliteman-0.99_pre20070509.ebuild:
  cosmetics

  12 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
  -sqliteman-0.99_pre20070403.ebuild, -sqliteman-0.99_pre20070421.ebuild:
  Nuke old

  11 May 2007; Guy Rutenberg (guyru) <guyrutenberg@gmail.com>
  +sqliteman-0.99_pre20070509.ebuild:
  Version bump, bug #173637

  25 Apr 2007; Guy Rutenberg (guyru) <guyrutenberg@gmail.com>
  +sqliteman-0.99_pre20070421.ebuild:
  Version bump, bug #173637

  07 Apr 2007; Guy Rutenberg (guyru) <guyrutenberg@gmail.com>
  +sqliteman-0.99_pre20070403.ebuild, +metadata.xml:
  New Ebuild for bug #173637
