@@ -1,4 +1,4 @@
-DIST sqliteman-0.99-20070509.tar.gz 507601 RMD160 77eb3e25528d99f3458a0d6c0d8c26a12aef6d3d SHA1 126760259db3b0ea86139e5cd68d4a69bbc4a97a SHA256 3c063f8b7e628488e47f59659b4ec1f1f6df14206edbd6ce3ca54a557b5ccfb0
-EBUILD sqliteman-0.99_pre20070509.ebuild 971 RMD160 04038a6e4a99eb173ad41c4223bcd9119cbcf84c SHA1 95dbaf3f533811430bf4784c664844a861ecde07 SHA256 52d9d4782d1d531c59f2727e2502f2bd6e5532d2c8c908a7e638794b5740d2f0
-MISC ChangeLog 770 RMD160 9b1e91c9e259139bdc5cdf47e5cc4745bd304f20 SHA1 e935136878820019a4589f445bf47db7e4b8c158 SHA256 eea306bf18547e25b4ed762d5c156020f21204c1fe057731bcec59f76a3e9e9c
+DIST sqliteman-1.0.1.tar.gz 538425 RMD160 48e279c5abe1e8da6e9cd618fbb55e36648ed625 SHA1 1c4ac936174f0f1dbddec479657e1da0dd133d01 SHA256 8f5779482e161e469124e44a98ead628b12c213d3df356231924d1172508a572
+EBUILD sqliteman-1.0.1.ebuild 726 RMD160 8a49bf7e0b8528d479442b506f792cb1f4a01105 SHA1 3c615f2a3f05f861d5c1a95bcd9a3a6035c60b8f SHA256 2e7623884e68acc9d60e5a6f52f8ec7eaf156e116d951e5667be3f5a59743e86
+MISC ChangeLog 1024 RMD160 01fb2db693a28521f54d0d37fb936100a3be9bd8 SHA1 b6685068f94481761ed4e137a843b7f5e710781d SHA256 3aed6632a31b233936050d49c1204b70e41f51fba4a5b8442a9163438b6f4f9e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
