@@ -1,4 +1,4 @@
-DIST tntdb-0.9.1.tar.gz 900898 RMD160 80b781a1815fef352346310f8c27e550c1f9c34d SHA1 f8de08b1d74261cc367253fe9d261bd356f5a1ec SHA256 1c70b3553ddadeefafd90bd67480da5b6a6547571471591ae8645946eef523c6
-EBUILD tntdb-0.9.1-r1.ebuild 871 RMD160 01f05775a2eafa47d99b304a2cde3f6cb3b300dd SHA1 fc2b95867b3754eadb8366d4e9637468b3014323 SHA256 3494ed4085c96911fc3d558016f5f3f396d85be66c36d42c5116e62c650cd821
+DIST tntdb-0.9.4.tar.gz 856061 RMD160 573f0a11d59ebdd15201f244f1ff1c573ca1d09f SHA1 b95cd6c0563bca7050ec6d467753625ffa836084 SHA256 253ea7e64d530adde8aa06180f4aea76ae3113c1f7a5c48c9df1b929bfffb829
+EBUILD tntdb-0.9.4.ebuild 1225 RMD160 cd1161f8854192048992ca3783b50733c61eb488 SHA1 4e615aef0197d6bba67b5b0d66331871f2c29f90 SHA256 eff1028fe4ce93b05519e38aa36bb2f6b849a08e71f2f968386c7101edce11cf
 MISC ChangeLog 620 RMD160 1224226153f8b6c5091584bbd5700c8013af95f6 SHA1 75ef591d1c8d74853c5504023b050e66d9241de9 SHA256 3018a35eac5a2d24d86c5cdc38cb64b22e6b779ee348dca0434ce42487e96505
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
