@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2007; Jakub Moc <jakub@gentoo.org> sqliteman-1.0.1.ebuild:
+  Switch to cmake-utils eclass; move built_with_use check to pkg_setup()
+
+  24 Nov 2007; Tiziano Müller <dev-zero@gentoo.org> ++,
+  -sqliteman-0.99_pre20070509.ebuild:
+  Version bump.
+
   19 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
   sqliteman-0.99_pre20070509.ebuild:
   cosmetics
